change to springboot

--- a/xxl-job-admin/src/main/resources/application.yml
+++ b/xxl-job-admin/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     thymeleaf:
         cache: false
         mode: LEGACYHTML5
-        prefix: classpath:/templates
+        prefix: classpath:/WEB-INF/templates
     # jackson时间格式化
     jackson:
         date-format: yyyy-MM-dd HH:mm:ss
@@ -20,8 +20,8 @@ spring:
 #            enabled: true
     resources: # 指定静态资源的路径
         static-locations: classpath:/static/,classpath:/templates/,classpath:/META-INF/resources/,classpath:/META-INF/resources/webjars/
-    cache:
-      type: redis
+#    cache:
+#      type: redis
 #    redis:
 #        open: true  # 是否开启redis缓存  true开启   false关闭
 #        host: 192.168.5.30
@@ -32,36 +32,36 @@ spring:
 #            max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
 #            max-idle: 10      # 连接池中的最大空闲连接
 #            min-idle: 5       # 连接池中的最小空闲连接
-    datasource:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driverClassName: com.mysql.jdbc.Driver
-        druid:
-            initial-size: 10
-            max-active: 100
-            min-idle: 10
-            max-wait: 60000
-            pool-prepared-statements: true
-            max-pool-prepared-statement-per-connection-size: 20
-            time-between-eviction-runs-millis: 60000
-            min-evictable-idle-time-millis: 300000
-            validation-query: SELECT 1 FROM DUAL
-            test-while-idle: true
-            test-on-borrow: false
-            test-on-return: false
-            stat-view-servlet:
-                enabled: true
-                url-pattern: /druid/*
-            filter:
-                stat:
-                    log-slow-sql: true
-                    slow-sql-millis: 1000
-                    merge-sql: true
-                wall:
-                    config:
-                        multi-statement-allow: true
-        url: jdbc:mysql://192.168.5.30:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
-        password: zhonglixundaqianbaidu
-        username: root
+#    datasource:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driverClassName: com.mysql.jdbc.Driver
+#        druid:
+#            initial-size: 10
+#            max-active: 100
+#            min-idle: 10
+#            max-wait: 60000
+#            pool-prepared-statements: true
+#            max-pool-prepared-statement-per-connection-size: 20
+#            time-between-eviction-runs-millis: 60000
+#            min-evictable-idle-time-millis: 300000
+#            validation-query: SELECT 1 FROM DUAL
+#            test-while-idle: true
+#            test-on-borrow: false
+#            test-on-return: false
+#            stat-view-servlet:
+#                enabled: true
+#                url-pattern: /druid/*
+#            filter:
+#                stat:
+#                    log-slow-sql: true
+#                    slow-sql-millis: 1000
+#                    merge-sql: true
+#                wall:
+#                    config:
+#                        multi-statement-allow: true
+#        url: jdbc:mysql://192.168.5.30:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
+#        password: zhonglixundaqianbaidu
+#        username: root
     #mail:
       #default-encoding: UTF-8
       #host: smtp.gmail.com
