--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -117,11 +117,11 @@
 		</dependency>
 
 		<!-- c3p0 -->
-		<dependency>
-			<groupId>com.mchange</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>${c3p0.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.mchange</groupId>-->
+			<!--<artifactId>c3p0</artifactId>-->
+			<!--<version>${c3p0.version}</version>-->
+		<!--</dependency>-->
 		<!-- mysql-connector -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -129,9 +129,19 @@
 			<version>${mysql-connector-java.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>${mybatis.version}</version>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.mybatis</groupId>-->
+			<!--<artifactId>mybatis</artifactId>-->
+			<!--<version>${mybatis.version}</version>-->
+		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 
 		<!-- httpclient -->
